# language-reporting

./: .editorconfig  .travis.yml  Cargo.toml
crates/render-tree/: Cargo.toml
crates/render-tree/src/: component.rs  debug.rs  document.rs  helpers.rs  lib.rs  macros.rs  prelude.rs  render.rs  utils.rs
crates/render-tree/src/stylesheet/: accumulator.rs  color.rs  format.rs  mod.rs  style.rs
examples/: configure.rs  emit.rs
src/: components.rs  diagnostic.rs  emitter.rs  lib.rs  models.rs  simple.rs  span.rs
