[package]
name = "language-reporting"
version = "0.2.0"
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Diagnostic reporting support for the codespan crate"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-reporting"
exclude = ["assets/**"]
edition = "2018"

[workspace]
members = [".", "crates/render-tree"]

[dependencies]
render-tree = { path = "./crates/render-tree", version = "0.1.0" }
termcolor = "1.0.4"
log = "0.4.6"
itertools = "0.7.8"
derive-new = "0.5.6"

[dev-dependencies]
structopt = "0.2.13"
unindent = "0.1.3"
term = "0.5.1"
runtime-fmt = "0.3.0"
# pretty_assertions = { git = "https://github.com/Nemo157/rust-pretty-assertions", rev = "9332632" }
regex = "1.0.5"
pretty_env_logger = "0.2.5"